k8s/base/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost
spec:
  selector:
    app: ghost
  ports:
  - port: 80
    targetPort: 2368
    name: http
  type: ClusterIP
